Moving search categories to another component

--- a/src/app/product-search/product-detail/product-detail.component.html
+++ b/src/app/product-search/product-detail/product-detail.component.html
@@ -1,6 +1,4 @@
-<ul class="product-detail-path">
-  <li class="path-category" *ngFor="let category of productCategories">{{category}}</li>
-</ul>
+<search-category [searchCategories]="productCategories"></search-category>
 
 <section class="product-detail-container">
     <div class="product-detail">
