--- a/src/app/product-search/product-detail/product-detail.component.html
+++ b/src/app/product-search/product-detail/product-detail.component.html
@@ -3,17 +3,17 @@
 <section class="product-detail-container">
     <div class="product-detail">
       <div class="product-detail-picture">
-        <img class="product-detail-image" src="{{product.item.picture}}">
+        <img class="product-detail-image" src="{{productDetail.picture}}">
       </div>
       <div class="product-detail-information">
         <span class="product-detail-condition">
-          {{product.item.condition}} - {{product.item.sold_quantity}} vendidos
+          {{productDetail.condition}} - {{productDetail.sold_quantity}} vendidos
         </span>
         <div class="product-detail-title">
-          {{product.item.title}}
+          {{productDetail.title}}
         </div>
         <span class="product-detail-price">
-          !$ {{product.item.price.amount}}
+          !$ {{productDetail.price.amount}}
           <sup>00</sup>
         </span>
         <a class="product-detail-buy" href="">Comprar!</a>
@@ -21,7 +21,7 @@
       <div class="product-detail-description">
         <h2>Descripcion</h2>
         <div class="product-detail-description-text">
-          {{product.item.description}}
+          {{productDetail.description}}
         </div>
       </div>
     </div>
