--- a/src/app/product-search/product-search.component.scss
+++ b/src/app/product-search/product-search.component.scss
@@ -51,6 +51,7 @@
     .product-search-button {
       background-color: $ml-light-grey;
       border: none;
+      outline: none;
       cursor: pointer;
       vertical-align: top;
       padding: 10px 12px;
