--- a/src/app/product-search/search-category/search-category.component.scss
+++ b/src/app/product-search/search-category/search-category.component.scss
@@ -1,10 +1,11 @@
 @import '../../../base';
 
 .search-category-path {
-  padding: 5px 10%;
+  padding: 0 10%;
   color: $ml-grey;
   font-size: $ml-search-detail-category-font-size;
   list-style-type: none;
+  margin: 16px 0;
 
   .path-category {
     display: inline-block;
