--- a/src/app/product-search/search-detail/search-detail.component.html
+++ b/src/app/product-search/search-detail/search-detail.component.html
@@ -5,7 +5,7 @@
         <img class="product-picture" src="{{item.picture}}">
       </div>
       <div class="search-detail-product-information">
-        <span class="product-price">!$ {{item.price.amount}}</span>
+        <span class="product-price">{{item.price.currency | productCurrency}} {{item.price.amount}}</span>
         <i class="product-free-shipping" *ngIf="item.free_shipping" ></i>
         <p class="product-title">{{item.title}}</p>
       </div>
