--- a/src/app/product-search/search-category/search-category.component.scss
+++ b/src/app/product-search/search-category/search-category.component.scss
@@ -2,7 +2,7 @@
 
 .search-category-path {
   padding: 0 10%;
-  color: $ml-grey;
+  color: $ml-search-category-path-color;
   font-size: $ml-search-detail-category-font-size;
   list-style-type: none;
   margin: 16px 0;
