--- a/src/app/product-search/product-detail/product-detail.component.scss
+++ b/src/app/product-search/product-detail/product-detail.component.scss
@@ -3,7 +3,7 @@
 $ml-product-detail-image-width: 680px;
 
 .product-detail-container {
-  background-color: $white;
+  background-color: $ml-product-detail-container-background-color;
   margin: 16px 10%;
   min-width: 1024px;
 
@@ -34,14 +34,14 @@ $ml-product-detail-image-width: 680px;
         font-size: $ml-product-detail-condition-font-size;
         display: block;
         margin-bottom: 16px;
-        color: $ml-dark-grey;
+        color: $ml-product-detail-condition-color;
       }
 
       .product-detail-title {
         font-size: $ml-product-detail-title-font-size;
         display: block;
         margin-bottom: 32px;
-        color: $ml-dark-grey;
+        color: $ml-product-detail-title-color;
         white-space: normal;
         font-weight: bold;
       }
@@ -51,11 +51,16 @@ $ml-product-detail-image-width: 680px;
         display: block;
         font-weight: 400;
         margin-bottom: 32px;
-        color: $ml-dark-grey;
+        color: $ml-product-detail-price-color;
+
+        & sup {
+          font-size: 26px;
+          font-weight: 300;
+        }
       }
 
       .product-detail-buy {
-        background-color: $ml-light-blue;
+        background-color: $ml-product-detail-buy-background-color;
         text-align: center;
         padding: 16px 32px;
         text-decoration: none;
@@ -69,23 +74,16 @@ $ml-product-detail-image-width: 680px;
     .product-detail-description {
       padding: 32px;
 
+      & h2 {
+        color: $ml-product-detail-description-color;
+      }
+
       .product-detail-description-text {
         white-space: normal;
         border-radius: 4px;
         font-size: 14px;
-        color: $ml-grey;
+        color: $ml-product-detail-description-text-color;
       }
     }
   }
-}
-
-.product-detail .product-detail-information .product-detail-price sup {
-  vertical-align: top;
-  font-size: 26px;
-  margin-left: 5px;
-  font-weight: 300;
-}
-
-.product-detail-description h2 {
-  color: $ml-dark-grey;
 }
