--- a/src/app/product-search/search-detail/search-detail.component.scss
+++ b/src/app/product-search/search-detail/search-detail.component.scss
@@ -1,16 +1,16 @@
 @import '../../../base';
 
 .search-detail-container {
-  background-color: $white;
+  background-color: $ml-search-detail-container-background-color;
   margin: 5px 10%;
 
   .search-detail-product {
     padding: 16px;
     white-space: nowrap;
     display: block;
-    color: $ml-dark-grey;
+    color: $ml-search-detail-product-color;
     text-decoration: none;
-    border-bottom: 1px solid $white;
+    border-bottom: 1px solid $ml-search-detail-product-border-color;
 
     &:hover {
       cursor: pointer;
@@ -62,7 +62,7 @@
 
       .product-location-city {
         font-size: $ml-search-detail-location-font-size;
-        color: $ml-dark-grey;
+        color: $ml-search-detail-product-location-color;
       }
     }
   }
